@@ -10,6 +10,7 @@
 * top_srcdir can change based on ntp v. sntp.  Harlan Stenn.
 * sntp/tests/ function parameter list cleanup.  Damir Tomić.
 * sntp/unity/unity_config.h: handle stdint.h.  Harlan Stenn.
+* sntp/unity/unity_internals.h: handle *INTPTR_MAX on old Solaris.  Harlan Stenn.
 ---
 (4.2.8p3) 2015/06/29 Released by Harlan Stenn <stenn@ntp.org>
 
